Add text summary function.

--- a/app/templates/visualize.html
+++ b/app/templates/visualize.html
@@ -25,6 +25,10 @@
             <h5 class="card-title">Detected News Category:</h5>
             <p class="card-text text-info fw-bold">{{ news_category }}</p>
 
+            <!-- Add news summary -->
+            <h5 class="card-title">News Summary:</h5>
+            <p class="card-text text-info fw-bold">{{ summary }}</p>
+
             {% if emotion_scores %}
             <hr>
             <h5 class="card-title">Detected Emotions:</h5>
