--- a/app/templates/share.html
+++ b/app/templates/share.html
@@ -46,7 +46,7 @@
                         </div>
 
                         <!-- View detail -->
-                        <a href="{{ url_for('post_detail', post_id=item.post.id) }}"
+                        <a href="{{ url_for('main.post_detail', post_id=item.post.id) }}"
                             class="btn btn-outline-primary mt-auto align-self-start">
                             View Detail
                         </a>
