--- a/app/templates/history.html
+++ b/app/templates/history.html
@@ -18,7 +18,7 @@
             {% for post in posts %}
             <tr>
                 <td>{{ post.timestamp.strftime('%H:%M:%S') }}</td>
-                <td><a href="{{ url_for('post_detail', post_id=post.id) }}">{{ post.title }}</a></td>
+                <td><a href="{{ url_for('main.post_detail', post_id=post.id) }}">{{ post.title }}</a></td>
                 <td>
                     {% if post.sentiment == 'Positive' %}
                     <span class="badge bg-success">Positive</span>
