Refactoring and blueprint sharing route;Fix URL for endpoint

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -21,7 +21,7 @@
                     <p class="text-center mb-4 auth-card-subtitle">Sign in to continue to News Sentiment.</p> {#
                     Subtitle #}
 
-                    <form method="post" action="{{ url_for('main.login') }}">
+                    <form method="post" action="{{ url_for('auth.login') }}">
                         {{ form.hidden_tag() }}
 
                         <div class="mb-3">
@@ -52,8 +52,6 @@
                                 {{ form.remember_me(class="form-check-input", id="remember_me") }}
                                 <label class="form-check-label" for="remember_me">Remember me</label>
                             </div>
-                            {# <a href="{{ url_for('main.forgot_password') }}" class="small auth-card-minor-link">Forgot
-                                password?</a> #}
                         </div>
 
 
@@ -63,7 +61,7 @@
                     </form>
 
                     <div class="mt-4 text-center auth-card-footer-link">
-                        <p>New User? <a href="{{ url_for('main.register') }}">Create an account</a>.</p>
+                        <p>New User? <a href="{{ url_for('auth.register') }}">Create an account</a>.</p>
                     </div>
 
                 </div>
