--- a/app/templates/visualize.html
+++ b/app/templates/visualize.html
@@ -70,8 +70,8 @@
     </div>
 
     <div class="text-center mt-4 pt-2 mb-5">
-        <a href="{{ url_for('main.upload') }}" class="btn btn-primary me-2">Analyze Another</a>
-        <a href="{{ url_for('main.share') }}" class="btn btn-outline-secondary">Go to My Share</a>
+        <a href="{{ url_for('upload.upload') }}" class="btn btn-primary me-2">Analyze Another</a>
+        <a href="{{ url_for('share.share') }}" class="btn btn-outline-secondary">Go to My Share</a>
     </div>
 </div>
 {% endblock %}
