--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,30 +26,30 @@
                     {% if current_user.is_authenticated %}
                     <!-- Upload/Input dropdown -->
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="{{ url_for('main.upload') }}">Upload</a>
+                        <a class="nav-link text-white" href="{{ url_for('upload.upload') }}">Upload</a>
                     </li>
 
                     <!-- Result dropdown -->
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="{{ url_for('main.history') }}">History</a>
+                        <a class="nav-link text-white" href="{{ url_for('history.history') }}">History</a>
                     </li>
 
                     <!-- User Insight -->
                     <li class="nav-item">
                         <a class="nav-link text-white"
-                            href="{{ url_for('main.user', username=current_user.username) }}">Insight</a>
+                            href="{{ url_for('user.user_profile', username=current_user.username) }}">Insight</a>
                     </li>
 
 
                     <!-- My Share -->
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="{{ url_for('main.share') }}">My Share</a>
+                        <a class="nav-link text-white" href="{{ url_for('share.share') }}">My Share</a>
                     </li>
 
 
                     <!-- Notification -->
                     <li class="nav-item position-relative">
-                        <a class="nav-link text-white" href="{{ url_for('main.notifications') }}">
+                        <a class="nav-link text-white" href="{{ url_for('notify.notifications') }}">
                             Notifications
                             {% set unread_count = current_user.notifications|selectattr('is_read', 'equalto',
                             False)|list|length %}
@@ -64,16 +64,16 @@
 
                     <!-- Logout -->
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="{{ url_for('main.logout') }}">Logout</a>
+                        <a class="nav-link text-white" href="{{ url_for('auth.logout') }}">Logout</a>
                     </li>
 
                     {% else %}
                     <!-- When not logged in -->
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="{{ url_for('main.login') }}">Login</a>
+                        <a class="nav-link text-white" href="{{ url_for('auth.login') }}">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="{{ url_for('main.register') }}">Register</a>
+                        <a class="nav-link text-white" href="{{ url_for('auth.register') }}">Register</a>
                     </li>
                     {% endif %}
                 </ul>
@@ -137,7 +137,7 @@
             <div class="toast-body">
                 {{ unread_message }}
                 <div class="mt-2 text-end">
-                    <a href="{{ url_for('main.mark_notification_read_and_redirect', next=request.full_path) }}"
+                    <a href="{{ url_for('notify.mark_notification_read_and_redirect', next=request.full_path) }}"
                         class="btn btn-sm btn-primary">Okay</a>
                 </div>
             </div>
