--- a/app/templates/share.html
+++ b/app/templates/share.html
@@ -46,7 +46,7 @@
                         </div>
 
                         <!-- View detail -->
-                        <a href="{{ url_for('main.post_detail', post_id=item.post.id) }}"
+                        <a href="{{ url_for('share.post_detail', post_id=item.post.id) }}"
                             class="btn btn-outline-primary mt-auto align-self-start">
                             View Detail
                         </a>
@@ -71,7 +71,7 @@
     <div class="modal-dialog modal-lg modal-dialog-centered"> {# Added modal-dialog-centered #}
         {# Add a custom class to .modal-content for dark theme styling #}
         <div class="modal-content custom-dark-modal">
-            <form method="POST" action="{{ url_for('main.share_post_modal') }}">
+            <form method="POST" action="{{ url_for('share.share_post_modal') }}">
                 {{ form.hidden_tag() }}
 
                 <div class="modal-header">
