Complete the testing of upload and history pages

--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -23,13 +23,16 @@
                 This product is dedicated to news sentiment analysis. Users can obtain positive, negative, neutral and
                 other emotional information by uploading news texts, which has multiple meanings for individuals.</p>
             <ul>
-                <li class="reveal-on-scroll delay-100ms"><strong>Information filtering</strong><br>Individuals can quickly obtain the emotional inclination of
+                <li class="reveal-on-scroll delay-100ms"><strong>Information filtering</strong><br>Individuals can
+                    quickly obtain the emotional inclination of
                     news, help
                     judge the credibility and importance of information, and make more informed decisions.</li>
-                <li class="reveal-on-scroll delay-200ms"><strong>Emotional regulation</strong><br>Understanding news emotions helps individuals manage their
+                <li class="reveal-on-scroll delay-200ms"><strong>Emotional regulation</strong><br>Understanding news
+                    emotions helps individuals manage their
                     emotional
                     reactions and avoid unnecessary anxiety and emotional fluctuations caused by negative news.</li>
-                <li class="reveal-on-scroll delay-300ms"><strong>Decision basis</strong><br>In life or investment decisions, one can refer to the results of news
+                <li class="reveal-on-scroll delay-300ms"><strong>Decision basis</strong><br>In life or investment
+                    decisions, one can refer to the results of news
                     sentiment
                     analysis to help individuals assess risks and opportunities.</li>
             </ul>
@@ -42,8 +45,8 @@
                 <p>Directly paste news content for analysis</p>
             </div>
             <div class="feature-box reveal-on-scroll delay-100ms">
-                <h4>📂 Upload files</h4>
-                <p>Support uploading and analyzing txt and docx files</p>
+                <h4>🔍 Finding </h4>
+                <p>Observe the news category tendencies of oneself and different groups</p>
             </div>
             <div class="feature-box reveal-on-scroll delay-200ms">
                 <h4>📊 Real time results</h4>
